# vsb2

./: CMakeLists.txt  README.md
inc/vsb2/: engine.h  error.h  log.h
inc/vsb2/graphics/: commandbuffer.h  commandpool.h  device.h  framebuffers.h  instance.h  pipeline.h  pipelinelayout.h  renderpass.h  shader.h  swapchain.h  sync.h  window.h
inc/vsb2/graphics/buffers/: vertexbuffer.h
inc/vsb2/graphics/models/: vertex2d.h
shaders/: triangle.frag  triangle.vert
src/vsb2/: engine.c  error.c  log.c  main.c
src/vsb2/graphics/: commandbuffer.c  commandpool.c  device.c  framebuffers.c  instance.c  pipeline.c  pipelinelayout.c  renderpass.c  shader.c  swapchain.c  sync.c  window.c
src/vsb2/graphics/buffers/: vertexbuffer.c
src/vsb2/graphics/models/: vertex2d.c
